[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Philipp Oppermann <dev@phil-opp.com>"]
build = "build.rs"
categories = ["command-line-utilities", "development-tools", "embedded", "os"]
description = "Automatically cross-compiles the sysroot crates core, compiler_builtins, and alloc."
documentation = "https://docs.rs/crate/cargo-xbuild"
keywords = ["cli", "cross", "compilation", "std", "osdev"]
license = "MIT OR Apache-2.0"
name = "cargo-xbuild"
repository = "https://github.com/rust-osdev/cargo-xbuild"
version = "0.6.1"

[lib]
name = "xargo_lib"

[dependencies]
libc = "0.2.18"
rustc_version = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3"
toml = "0.5"
walkdir = "2.3"

[dependencies.error-chain]
version = "0.12"
default-features = false

[dependencies.cargo_metadata]
version = "0.9.1"
default-features = false

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winerror", "fileapi", "winbase", "std"] }

[dev-dependencies]
lazy_static = "1.4"

[dev-dependencies.parking_lot]
version = "0.10"

[features]
dev = []
backtrace = ["error-chain/backtrace"]

[package.metadata.release]
no-dev-version = true
pre-release-replacements = [
    { file="CHANGELOG.md", search="## Unreleased", replace="## Unreleased\n\n## {{version}} – {{date}}", exactly=1 },
]
pre-release-commit-message = "Release version {{version}}"
