[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Philipp Oppermann <dev@phil-opp.com>"]
build = "build.rs"
categories = ["command-line-utilities", "development-tools", "embedded", "os"]
description = "Automatically cross-compiles the sysroot crates core, compiler_builtins, and alloc."
documentation = "https://docs.rs/crate/cargo-xbuild"
keywords = ["cli", "cross", "compilation", "std", "osdev"]
license = "MIT OR Apache-2.0"
name = "cargo-xbuild"
repository = "https://github.com/rust-osdev/cargo-xbuild"
version = "0.6.2"
edition = "2018"

[lib]
name = "xargo_lib"

[dependencies]
anyhow = "1.0"
cargo_metadata = { version = "0.11", default-features = false }
libc = "0.2.18"
rustc_version = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
toml = "0.5"
walkdir = "2.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winerror", "fileapi", "winbase", "std"] }

[features]
dev = []
# only usable in nightly version
backtrace = []

[package.metadata.release]
no-dev-version = true
pre-release-replacements = [
    { file="CHANGELOG.md", search="## Unreleased", replace="## Unreleased\n\n## {{version}} – {{date}}", exactly=1 },
]
pre-release-commit-message = "Release version {{version}}"
